integration_tests/tests/integration_tests/snapshots/integration_tests__token22_tests__t22_with_null_terminated_uri.snap
---
source: integration_tests/tests/integration_tests/token22_tests.rs
expression: response
---
{
  "last_indexed_slot": 1,
  "interface": "V1_NFT",
  "id": "AWXzZ1NV2qQqffafUsrkfT3QxHaUtS4iEx75MoE5YFLc",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://madlads.s3.us-west-2.amazonaws.com/json/2056.json",
    "files": [],
    "metadata": {
      "name": "Mad Lads #2056",
      "symbol": "MAD"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "4d4X6ve6WDjDNadavz3Y3hnCBgmBMWBgCAygtFhvNcLq",
      "scopes": [
        "metadata"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": ""
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false,
  "mint_extensions": {
    "metadata": {
      "uri": "https://madlads.s3.us-west-2.amazonaws.com/json/2056.json",
      "mint": "AWXzZ1NV2qQqffafUsrkfT3QxHaUtS4iEx75MoE5YFLc",
      "name": "Mad Lads #2056",
      "symbol": "MAD",
      "update_authority": "4d4X6ve6WDjDNadavz3Y3hnCBgmBMWBgCAygtFhvNcLq",
      "additional_metadata": [
        [
          "royalty_basis_points",
          "420"
        ],
        [
          "yaoYaopKcDsMxnjbT1jBdvYz6XRmjPdAPHczsCraERc",
          "0"
        ],
        [
          "2RtGg6fsFiiF1EQzHqbd66AhW7R5bWeQGpTbv2UMkCdW",
          "100"
        ]
      ]
    },
    "transfer_hook": {
      "authority": "4d4X6ve6WDjDNadavz3Y3hnCBgmBMWBgCAygtFhvNcLq",
      "program_id": "wns1gDLt8fgLcGhWi5MqAqgXpwEP1JftKE9eZnXS1HM"
    },
    "metadata_pointer": {
      "authority": "4d4X6ve6WDjDNadavz3Y3hnCBgmBMWBgCAygtFhvNcLq",
      "metadata_address": "AWXzZ1NV2qQqffafUsrkfT3QxHaUtS4iEx75MoE5YFLc"
    },
    "permanent_delegate": {
      "delegate": null
    },
    "group_member_pointer": {
      "authority": "9SUrE3EPBoXVjNywEDHSJKJdxebs8H8sLgEWdueEvnKX",
      "member_address": "Gna8eabKa9RYuQN1sULsKpL3qt53tPNomyXHeTgs3t52"
    },
    "mint_close_authority": {
      "close_authority": "9SUrE3EPBoXVjNywEDHSJKJdxebs8H8sLgEWdueEvnKX"
    }
  },
  "token_info": {
    "supply": 1,
    "decimals": 0,
    "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    "mint_authority": "9SUrE3EPBoXVjNywEDHSJKJdxebs8H8sLgEWdueEvnKX",
    "freeze_authority": "9SUrE3EPBoXVjNywEDHSJKJdxebs8H8sLgEWdueEvnKX"
  }
}
