integration_tests/tests/integration_tests/snapshots/integration_tests__token22_tests__t22_zero_supply_mint_close_open.snap
---
source: integration_tests/tests/integration_tests/token22_tests.rs
expression: open
---
{
  "last_indexed_slot": 1,
  "interface": "FungibleToken",
  "id": "Fz83nWsmXUmUEx6rZBLPdAHQYvdjssXFFPSjQ7HmAvmk",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/das-zero-supply-close.json",
    "files": [],
    "metadata": {
      "name": "DAS Zero Supply Close Test",
      "symbol": "DASZERO"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "41U6GZpM9s7tnDPUMG7Fb21DujXnx35j4MRDD5pb672w",
      "scopes": [
        "metadata"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": false,
    "data_hash": "",
    "creator_hash": "",
    "asset_hash": "",
    "tree": "",
    "seq": 0,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.0,
    "basis_points": 0,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "token",
    "owner": ""
  },
  "supply": null,
  "mutable": true,
  "burnt": false,
  "mint_extensions": {
    "metadata": {
      "uri": "https://example.com/das-zero-supply-close.json",
      "mint": "Fz83nWsmXUmUEx6rZBLPdAHQYvdjssXFFPSjQ7HmAvmk",
      "name": "DAS Zero Supply Close Test",
      "symbol": "DASZERO",
      "update_authority": "41U6GZpM9s7tnDPUMG7Fb21DujXnx35j4MRDD5pb672w",
      "additional_metadata": []
    },
    "metadata_pointer": {
      "authority": "41U6GZpM9s7tnDPUMG7Fb21DujXnx35j4MRDD5pb672w",
      "metadata_address": "Fz83nWsmXUmUEx6rZBLPdAHQYvdjssXFFPSjQ7HmAvmk"
    },
    "mint_close_authority": {
      "close_authority": "41U6GZpM9s7tnDPUMG7Fb21DujXnx35j4MRDD5pb672w"
    }
  },
  "token_info": {
    "supply": 0,
    "decimals": 0,
    "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb",
    "mint_authority": "41U6GZpM9s7tnDPUMG7Fb21DujXnx35j4MRDD5pb672w"
  }
}
